[gd_scene load_steps=4 format=3 uid="uid://dy4sjevtt1fs6"]

[ext_resource type="Script" path="res://UI/GameOver.gd" id="1_67gvg"]
[ext_resource type="Theme" uid="uid://3sybyyua0p6w" path="res://UI/ui_theme.tres" id="1_e2kre"]
[ext_resource type="Texture2D" uid="uid://e0yknok02q3s" path="res://Sprites/house_sprites.png" id="3_t23dh"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67gvg")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(0, 648)
layout_mode = 1
offset_left = -1778.0
offset_right = 2578.0
offset_bottom = 648.0
texture = ExtResource("3_t23dh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_e2kre")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("1_e2kre")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Your Score: "
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 90

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_e2kre")
text = "Restart"

[node name="TouchScreenButton" type="TouchScreenButton" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Restart"]

[node name="Main Menu" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_e2kre")
text = "Main Menu"

[node name="TouchScreenButton" type="TouchScreenButton" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Main Menu"]

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_e2kre")
text = "Quit"

[node name="TouchScreenButton" type="TouchScreenButton" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Quit"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
